Añadidos archivos memoria básicos
Se han añadido los archivos de la memoria: parteA.tex y parteB.tex

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -34,6 +34,8 @@ GIS: & Carlos Vázquez Sánchez
 \tableofcontents
 \thispagestyle{empty}
 \part{A}
+\input{./partes/a/parteA.tex}
 \part{B}
+\input{./partes/b/parteB.tex}
 \lettrine[lines=1,slope=4pt,findent=0pt]{P}{}rimera revisión de la memoria.
 \end{document}
