--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -38,4 +38,8 @@ GIS: & Carlos Vázquez Sánchez
 \part{B}
 \input{./partes/b/parteB.tex}
 \lettrine[lines=1,slope=4pt,findent=0pt]{P}{}rimera revisión de la memoria.
+
+
+\bibliographystyle{plain}
+\bibliography{./bibliografia/bibliografia.bib}
 \end{document}
