--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -33,9 +33,9 @@ GIS: & Carlos Vázquez Sánchez
 
 \tableofcontents
 \thispagestyle{empty}
-\part{A}
+\part{Observación}
 \input{./partes/a/parteA.tex}
-\part{B}
+\part{Diseño}
 \input{./partes/b/parteB.tex}
 \lettrine[lines=1,slope=4pt,findent=0pt]{P}{}rimera revisión de la memoria.
 
