Actualizado primera parte.
FALTA: Acabar introducción.

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -4,3 +4,8 @@ title = {Fundamentos de sistemas operativos},
 date = {2005},
 OPTedition = {7},
 }
+@online{vmware,
+title = {Página oficial de VMware},
+url = {http://www.vmware.com/es/},
+}
+
