--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt,a4paper,titlepage]{report}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -14,11 +14,11 @@
 
 \newcommand*{\autores}{
 \begin{tabular}{r l}
-GII+GIS: &  Jes˙s Alcalde Alc·zar \\
- & Adri·n GutiÈrrez JimÈnez \\
- & Germ·n Alonso Azcutia \\
-GIS+MAT: & JosÈ Ignacio Escribano Pablos \\
-GIS: & Carlos V·zquez S·nchez
+GII+GIS: &  Jes√∫s Alcalde Alc√°zar \\
+ & Adri√°n Guti√©rrez Jim√©nez \\
+ & Germ√°n Alonso Azcutia \\
+GIS+MAT: & Jos√© Ignacio Escribano Pablos \\
+GIS: & Carlos V√°zquez S√°nchez
 \end{tabular}
 }
 
@@ -28,16 +28,17 @@ GIS: & Carlos V·zquez S·nchez
 \begin{document}
 
 % Portada
-\portada{Pr·ctica Obligatoria}{DiseÒo y Arquitectura Software}{\ }{\autores}{MÛstoles}
+\portada{Pr√°ctica Obligatoria}{Dise√±o y Arquitectura Software}{\ }{\autores}{M√≥stoles}
 % Fin Portada
 
 \tableofcontents
 \thispagestyle{empty}
-\part{ObservaciÛn}
+
+\part{Observaci√≥n}
 \input{./partes/a/parteA.tex}
-\part{DiseÒo}
+
+\part{Dise√±o}
 \input{./partes/b/parteB.tex}
-\lettrine[lines=1,slope=4pt,findent=0pt]{P}{}rimera revisiÛn de la memoria.
 
 
 \bibliographystyle{plain}
