--- a/memoria/partes/a/parteA.tex
+++ b/memoria/partes/a/parteA.tex
@@ -1,3 +1,5 @@
-En esta primera parte de la memoria nos vamos a encargar de hacer una descripci髇 a nivel arquitect髇ico de los sistemas de virtualizaci髇 de las aulas de la Universidad Rey Juan Carlos.
+\chapter{Introducci贸n}
+\lettrine[lines=1,slope=4pt,findent=0pt]{E}{}n esta primera parte de la memoria nos vamos a encargar de hacer una descripci贸n a nivel arquitect贸nico de los sistemas de virtualizaci贸n de las aulas de la Universidad Rey Juan Carlos.\\
 
-\chapter{An醠isis}
+\noindent Como nos vamos a centrar en los ordenadores de las aulas, 茅stos se encuentran virtualizados con VMware~\cite{vmware}
+
