--- a/memoria/partes/a/parteA.tex
+++ b/memoria/partes/a/parteA.tex
@@ -3,3 +3,12 @@
 
 \noindent Como nos vamos a centrar en los ordenadores de las aulas, éstos se encuentran virtualizados con VMware~\cite{vmware}
 
+
+\chapter{Definición arquitectura virtualización}
+
+\lettrine[lines=1,slope=4pt,findent=0pt]{L}{}a de máquina virtual o intérprete se puede descomponer, a grandes rasgos, en cuatro componentes:
+\section{motor de simulación o interpretación}
+\section{memoria que contiene el código a interpretar}
+\section{representación del estado de la interpretación}
+\section{representación del estado del programa que se esta
+simulando}
