--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -1,11 +1,10 @@
-@book{so,
-author = {Silberschatz, Galvin, Gagne},
+@book{libroso,
+author = {Silberschatz and Galvin and Gagne},
 title = {Fundamentos de sistemas operativos},
 date = {2005},
 OPTedition = {7},
 }
-@online{vmware,
-title = {Página oficial de VMware},
-url = {http://www.vmware.com/es/},
+@misc{vmware,
+title = {Página oficial de {VM}ware},
+howpublished={\url{http://www.vmware.com/es/}},
 }
-
