--- a/memoria/partes/a/parteA.tex
+++ b/memoria/partes/a/parteA.tex
@@ -1,16 +1,6 @@
-\chapter{Introducción}
-\lettrine[lines=1,slope=4pt,findent=0pt]{E}{}n esta primera parte de la memoria nos vamos a encargar de hacer una descripción a nivel arquitectónico de los sistemas de virtualización de las aulas de la Universidad Rey Juan Carlos.\\
 
-\noindent Como nos vamos a centrar en los ordenadores de las aulas, éstos se encuentran virtualizados con VMware~\cite{vmware}\\
+% Añadir aqui solo los arhivos correspondientes a la parte A %
 
-\noindent En principio nos centraremos en las arquitecturas de virtualización de una forma genérica y seguidamente analizaremos específicamente el sistema utilizado en la URJC.
+\input{./partes/a/capitulo1.tex}
 
-
-\chapter{Definición arquitectura virtualización}
-
-\lettrine[lines=1,slope=4pt,findent=0pt]{L}{}a de máquina virtual o intérprete se puede descomponer, a grandes rasgos, en cuatro componentes:
-\section{motor de simulación o interpretación}
-\section{memoria que contiene el código a interpretar}
-\section{representación del estado de la interpretación}
-\section{representación del estado del programa que se esta
-simulando}
+\input{./partes/a/capitulo2.tex}
