--- a/memoria/partes/a/capitulo1.tex
+++ b/memoria/partes/a/capitulo1.tex
@@ -1,6 +1,51 @@
 \chapter{Introducción}
 \lettrine[lines=1,slope=4pt,findent=0pt]{E}{}n esta primera parte de la memoria nos vamos a encargar de hacer una descripción a nivel arquitectónico de los sistemas de virtualización de las aulas de la Universidad Rey Juan Carlos.\\
 
-\noindent Como nos vamos a centrar en los ordenadores de las aulas, éstos se encuentran virtualizados con VMware\cite{vmware}\\
+\noindent Para llevar a cabo esta tarea hemos decidido que la mejor opción pasa por describir o analizar qué es un sistema de virtualización, para después poder centrarnos en el caso concreto de las aulas de la URJC, que se encuentran virtualizados con VMware\cite{vmware} lo que significa que en el caso concreto nos centraremos en VMware, eso sí, haciendo continuas analogías a lo que se ve en las aulas.\\
 
-\noindent En principio nos centraremos en las arquitecturas de virtualización de una forma genérica y seguidamente analizaremos específicamente el sistema utilizado en la URJC.
+\noindent Pero para entrar un poco en materia vamos a intentar explicar brevemente que es esto de la \emph{virtualización}.
+
+\section{¿Qué es la virtualización?}
+\noindent Con la intención de hacernos una idea precisa de \emph{virtualización} hemos buscado diversas definiciones, de las cuales nos quedamos con:
+\begin{center}
+\emph{\textquotedblleft Virtualización es la creación -a través de software- de una versión virtual de algún recurso tecnológico, como puede ser una plataforma de hardware, un sistema operativo, un dispositivo de almacenamiento u otros recursos de red.\textquotedblright}-Wikipedia\cite{defvirwiki}\\
+\end{center}
+
+\noindent Es otras palabras, la creación mediante software de elementos hardware virtuales. Un buen ejemplo de esto es cuando particionamos un disco duro; físicamente tenemos un HDD pero a nivel de software existen dos, pues el disco duro esta \emph{virtualizado} en dos particiones.\\
+
+\noindent Dándole una vuelta de tuerca más, podemos definir \emph{virtualización} como el proceso por el cual una capa de software(VMM o \emph{Virtual Machine Monitor}) abstrae los recursos de la computadora física al Sistema Operativo o \emph{Máquina Virtual}.
+
+\section{¿Qué es una máquina virtual?}
+
+\noindent Al igual que antes, encontramos diversas acepciones de \emph{máquina virtual}, pero vamos a partir de la definición de \emph{Wikipedia} pues es la más completa.
+
+\begin{center}
+\emph{\textquotedblleft Una máquina virtual es un software que simula a una computadora y puede ejecutar programas como si fuese una computadora real. Este software en un principio fue definido como \textquotedblleft un duplicado eficiente y aislado de una máquina física\textquotedblright.\textquotedblright}-Wkipedia\cite{defmaqvirwiki}
+\end{center}
+
+\noindent Podemos encontrar dos tipos de éstas:
+
+\begin{itemize}
+\item \textbf{Máquinas virtuales de proceso} o máquina virtual de aplicación, se ejecuta como un proceso normal dentro de un sistema operativo y soporta un solo proceso. Su objetivo es el de proporcionar un entorno de ejecución independiente del sistema operativo y del hardware. Una máquina virtual de proceso muy popular es la de Java(\emph{Java Virtual Machine}).
+\item \textbf{Máquinas virtuales de sistema} o máquinas virtuales de hardware, que permiten a la máquina física multiplicarse entre varias máquinas virtuales, cada una con su propio sistema operativo. A la capa de software que se permite la virtualización se la llama \emph{monitor de máquina virtual} o \emph{Virtual Machine Monitor}, anteriormente mencionado.
+\end{itemize}
+
+\noindent Como es obvio nosotros nos vamos a centrar en la última.
+
+\section{Condiciones para la virtualización}
+
+\noindent Para llevar a cabo una virtualización del sistema, Popek y Goldberg escribieron en un artículo\cite{reqvir} qué condiciones se han de dar para una virtualización eficiente, para ello dividieron el repertorio de instrucciones en:
+\begin{itemize}
+\item \textbf{Instrucciones privilegiadas:} Las que sólo funcionan en modo kernel y no en modo usuario.
+\item \textbf{Instrucciones sensibles de control:} Las que cambian la configuración del sistema.
+\item \textbf{Instrucciones sensibles de comportamiento:} Aquellas que dependen de la configuración de los recursos. 
+\end{itemize}
+
+\noindent Y como resultado de su análisis formularon estos teoremas.
+\begin{teorema}
+Para cualquier computadora convencional de tercera generación, se puede construir un VMM efectivo si el conjunto de instrucciones sensibles es un subconjunto de las instrucciones privilegiadas.
+\end{teorema}
+\begin{teorema}
+Una máquina convencional de tercera generación es recursivamente virtualizable si es virtualizable y se puede construir para ella un VMM sin ninguna dependencia de sincronización.
+\end{teorema}
+\noindent Con esto volveremos más adelante, ahora centrémonos en su arquitectura.
