Actualizada bibliografia y añadidos paquetes.
Se ha actualizado la bibliografía y se ha añadido el paquete tikz.

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -1,10 +1,36 @@
-@book{libroso,
+@inbook{libroso,
 author = {Silberschatz and Galvin and Gagne},
 title = {Fundamentos de sistemas operativos},
 date = {2005},
 OPTedition = {7},
+pages = {45-65},
 }
 @misc{vmware,
 title = {Página oficial de {VM}ware},
 howpublished={\url{http://www.vmware.com/es/}},
+}
+
+
+@Misc{defvirwiki,
+author = {Wikipedia},
+title = {Página sobre el concepto de virtualización},
+howpublished = {\url{http://es.wikipedia.org/wiki/Virtualizacion}},
+}
+
+
+@Misc{defmaqvirwiki,
+author = {Wikipedia},
+title = {Página sobre las máquinas virtuales},
+howpublished = {\url{http://es.wikipedia.org/wiki/Maquina_virtual}},
+}
+
+
+@Article{reqvir,
+author = {Gerald J, Popek and Robert P. Goldberg},
+title = {Formal Requirements for Virtualizable Third Generation Architectures},
+journal = {Communications of the ACM},
+year = {1974},
+pages = {412 to 421},
+volume = {17},
+number = {7},
 }
