--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{amsmath}
+\usepackage{amsthm}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage[colorlinks=true,linkcolor=black,urlcolor=black,citecolor=black]{hyperref}
@@ -11,7 +12,9 @@
 \usepackage{color}
 \usepackage[left=3.00cm, right=3.00cm, top=3.00cm]{geometry}
 \usepackage[nottoc]{tocbibind}	%Para mostrar la bibliografia en el índice
+\usepackage{tikz}
 
+\newtheorem{teorema}{Teorema}
 
 \newcommand*{\autores}{
 \begin{tabular}{r l}
