Corregidas más erratas

--- a/memoria/partes/a/capitulo1.tex
+++ b/memoria/partes/a/capitulo1.tex
@@ -8,7 +8,10 @@
 \section{¿Qué es la virtualización?}
 \noindent Con la intención de hacernos una idea precisa de \emph{virtualización} hemos buscado diversas definiciones, de las cuales nos quedamos con:
 \begin{quote}
-\emph{\textquotedblleft Virtualización es la creación -a través de software- de una versión virtual de algún recurso tecnológico, como puede ser una plataforma de hardware, un sistema operativo, un dispositivo de almacenamiento u otros recursos de red.\textquotedblright}-Wikipedia\cite{defvirwiki}\\
+\emph{\textquotedblleft Virtualización es la creación -a través de software- de una versión virtual de algún recurso tecnológico, como puede ser una plataforma de hardware, un sistema operativo, un dispositivo de almacenamiento u otros recursos de red.\textquotedblright}
+\begin{flushright}
+--Wikipedia\cite{defvirwiki}
+\end{flushright}
 \end{quote}
 
 \noindent Es otras palabras, la creación mediante software de elementos hardware virtuales. Un buen ejemplo de ésto es cuando particionamos un disco duro; físicamente tenemos un HDD pero a nivel de software existen dos, pues el disco duro esta \emph{virtualizado} en dos particiones.\\
@@ -20,7 +23,10 @@
 \noindent Al igual que antes, encontramos diversas acepciones de \emph{máquina virtual}, pero vamos a partir de la definición de \emph{Wikipedia} pues es la más completa.
 
 \begin{quote}
-\emph{\textquotedblleft Una máquina virtual es un software que simula a una computadora y puede ejecutar programas como si fuese una computadora real. Este software en un principio fue definido como \textquotedblleft un duplicado eficiente y aislado de una máquina física\textquotedblright.\textquotedblright}-Wkipedia\cite{defmaqvirwiki}
+\emph{\textquotedblleft Una máquina virtual es un software que simula a una computadora y puede ejecutar programas como si fuese una computadora real. Este software en un principio fue definido como \textquotedblleft un duplicado eficiente y aislado de una máquina física\textquotedblright.\textquotedblright}
+\begin{flushright}
+--Wikipedia\cite{defmaqvirwiki}
+\end{flushright}
 \end{quote}
 
 \noindent Podemos encontrar dos tipos de éstas:
