Corregido enlace a bibliografía
Se producía un error en Windows, buscaba el archivo
./bibliografia/bibliografia.bib.bib
NO LO HE COMPROBADO EN LINUX

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -50,6 +50,6 @@ GIS:  	 & Carlos Vázquez Sánchez
 \input{./partes/b/parteB.tex}
 
 \bibliographystyle{plain}
-\bibliography{./bibliografia/bibliografia.bib}
+\bibliography{./bibliografia/bibliografia}
 
 \end{document}
