Añadido el glosario y el paquete glossaries, pero no consigo que se añada a la memoria.

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -13,6 +13,7 @@
 \usepackage[left=3.00cm, right=3.00cm, top=3.00cm]{geometry}
 \usepackage[nottoc]{tocbibind}	%Para mostrar la bibliografia en el índice
 \usepackage{tikz}
+\usepackage{glossaries} % Para el glosario
 
 \newtheorem{teorema}{Teorema}
 
@@ -26,8 +27,12 @@ GIS:  	 & Carlos Vázquez Sánchez
 \end{tabular}
 }
 
+\include{glosario}
+
 % Incluye archivo para utilizar el comando \portada
 \include{portada}
+
+\makeglossary
 
 \begin{document}
  
@@ -38,6 +43,8 @@ GIS:  	 & Carlos Vázquez Sánchez
 \tableofcontents
 \thispagestyle{empty}
 
+\printglossary[type=main,title={Glosario},toctitle={Glosario}]
+\printglossary
 
 \chapter*{Prefacio}
 \addcontentsline{toc}{chapter}{Prefacio}
