--- a/memoria/partes/a/capitulo1.tex
+++ b/memoria/partes/a/capitulo1.tex
@@ -14,9 +14,9 @@
 \end{flushright}
 \end{quote}
 
-\noindent Es otras palabras, se trata de la creación mediante software de elementos hardware virtuales. Un buen ejemplo de esto es cuando particionamos un disco duro; físicamente tenemos un único \gls{HDD} pero a nivel de software existen dos, pues el disco duro esta \emph{virtualizado} en dos particiones, el sistema operativo se encarga de abstraer las propiedades físicas del disco.\\
+\noindent Es otras palabras, se trata de la creación mediante software de elementos hardware virtuales. Un buen ejemplo de esto es cuando particionamos un disco duro; físicamente tenemos un único \gloss{HDD} pero a nivel de software existen dos, pues el disco duro esta \emph{virtualizado} en dos particiones, el sistema operativo se encarga de abstraer las propiedades físicas del disco.\\
 
-\noindent Dando una vuelta de tuerca más, podemos definir \emph{virtualización} como el proceso por el cual una capa de software \gls{VMM} o \emph{Virtual Machine Monitor}) abstrae los recursos de la computadora física al Sistema Operativo o \emph{Máquina Virtual}.\\
+\noindent Dando una vuelta de tuerca más, podemos definir \emph{virtualización} como el proceso por el cual una capa de software \gloss{VMM} o \emph{Virtual Machine Monitor}) abstrae los recursos de la computadora física al Sistema Operativo o \emph{Máquina Virtual}.\\
 
 \noindent Cabe destacar el uso de  \emph{Máquina Virtual} y \emph{VMM}, pues son el eje central de los sistemas de virtualización y conviene introducirlos. Y es por esto que nuestro siguiente apartado esta dedicado a ellas.
 
@@ -36,8 +36,8 @@
 \noindent Podemos encontrar dos tipos de éstas dependiendo de cómo se ejecuten en el sistema:
 
 \begin{itemize}
-\item \textbf{Máquinas virtuales de proceso} o máquina virtual de aplicación, se ejecuta como un proceso normal dentro de un sistema operativo y soporta un solo proceso. Su objetivo es el de proporcionar un entorno de ejecución independiente del sistema operativo y del hardware. Una máquina virtual de proceso muy popular es la de Java o \gls{JVM} (\emph{Java Virtual Machine}).
-\item \textbf{Máquinas virtuales de sistema} o máquinas virtuales de hardware, que permiten a la máquina física multiplicarse entre varias máquinas virtuales, cada una con su propio sistema operativo. A la capa de software que se permite la virtualización se la llama \emph{monitor de máquina virtual} o \emph{Virtual Machine Monitor}(\gls{VMM}), anteriormente mencionado.
+\item \textbf{Máquinas virtuales de proceso} o máquina virtual de aplicación, se ejecuta como un proceso normal dentro de un sistema operativo y soporta un solo proceso. Su objetivo es el de proporcionar un entorno de ejecución independiente del sistema operativo y del hardware. Una máquina virtual de proceso muy popular es la de Java o \gloss{JVM} (\emph{Java Virtual Machine}).
+\item \textbf{Máquinas virtuales de sistema} o máquinas virtuales de hardware, que permiten a la máquina física multiplicarse entre varias máquinas virtuales, cada una con su propio sistema operativo. A la capa de software que se permite la virtualización se la llama \emph{monitor de máquina virtual} o \emph{Virtual Machine Monitor}(\gloss{VMM}), anteriormente mencionado.
 \end{itemize}
 
 \noindent Como es obvio nosotros nos vamos a centrar en el último tipo, puesto que vamos a analizar la virtualización en las computadoras de la universidad, y éstas se ejecutan como un sistema operativo propio y no como una aplicación de éste.
@@ -47,11 +47,11 @@
 \noindent A la hora de crear un sistema virtualizado existen propiedades que hacen que se pueda evaluar, es decir \emph{¿Cuán bueno es el sistema?}, estas propiedades se refieren al el monitor de la máquina virtual o \emph{VMM}. Listémoslas pues:
 \begin{itemize}
 \item \textbf{Equivalencia o fidelidad:} Un programa corriendo bajo el VMM debe exhibir un comportamiento  esencialmente idéntico a aquel demostrado cuando se ejecuta directamente en una máquina equivalente.
-\item \textbf{Control de recursos y seguridad:} El \gls{VMM} debe estar en completo control de los recursos virtualizados.
-\item \textbf{Eficiencia:} La mayor parte de las instrucciones de máquina debe ser ejecutada sin la intervención del \gls{VMM}.
+\item \textbf{Control de recursos y seguridad:} El \gloss{VMM} debe estar en completo control de los recursos virtualizados.
+\item \textbf{Eficiencia:} La mayor parte de las instrucciones de máquina debe ser ejecutada sin la intervención del \gloss{VMM} \gloss{vmm}.
 \end{itemize}
 
-\noindent Para llevar a cabo una virtualización del sistema que cumpla estas propiedades, Popek y Goldberg escribieron en un artículo en 1974 en la revista \emph{Communications of the \gls{ACM}}\cite{reqvir}, qué condiciones se han de dar para una virtualización eficiente, en dicho artículo realizan un análisis del repertorio de instrucciones del computador o ISA (\emph{Instruction Set Architecture}).\\
+\noindent Para llevar a cabo una virtualización del sistema que cumpla estas propiedades, Popek y Goldberg escribieron en un artículo en 1974 en la revista \emph{Communications of the \gloss{ACM}}\cite{reqvir}, qué condiciones se han de dar para una virtualización eficiente, en dicho artículo realizan un análisis del repertorio de instrucciones del computador o ISA (\emph{Instruction Set Architecture}).\\
 
 \noindent Dividiendo las instrucciones en:
 \begin{itemize}
@@ -62,13 +62,13 @@
 
 \noindent Y como resultado de este análisis formularon los siguientes teoremas.
 \begin{teorema}
-Para cualquier computadora convencional de tercera generación, se puede construir un \gls{VMM} efectivo si el conjunto de instrucciones sensibles es un subconjunto de las instrucciones privilegiadas.
+Para cualquier computadora convencional de tercera generación, se puede construir un \gloss{VMM} efectivo si el conjunto de instrucciones sensibles es un subconjunto de las instrucciones privilegiadas.
 \end{teorema}
 
-\noindent Este teorema implica que para construir un \gls{VMM} basta con que todas las instrucciones que pueden afectar a su correcto funcionamiento, las instrucciones sensibles, pasen siempre el control al \gls{VMM}. Esto garantiza la propiedad de control de recursos y seguridad. En cambio, las instrucciones no privilegiadas se deberán ejecutarse de manera nativa, para lograr eficiencia.
+\noindent Este teorema implica que para construir un \gloss{VMM} basta con que todas las instrucciones que pueden afectar a su correcto funcionamiento, las instrucciones sensibles, pasen siempre el control al \gloss{VMM}. Esto garantiza la propiedad de control de recursos y seguridad. En cambio, las instrucciones no privilegiadas se deberán ejecutarse de manera nativa, para lograr eficiencia.
 
 \begin{teorema}
-Una máquina convencional de tercera generación es recursivamente virtualizable si es virtualizable y se puede construir para ella un \gls{VMM} sin ninguna dependencia de sincronización.
+Una máquina convencional de tercera generación es recursivamente virtualizable si es virtualizable y se puede construir para ella un \gloss{VMM} sin ninguna dependencia de sincronización.
 \end{teorema}
 
 \noindent Este teorema es fundamental, en lo que a nosotros se refiere, pues este último teorema no se cumple para arquitecturas de computadores x86, que casualmente son las que utilizan los computadores de la universidad.\\
