--- a/memoria/glosario.bib
+++ b/memoria/glosario.bib
@@ -2,10 +2,12 @@
 word = {HDD},
 definition = {\emph{Hard Disk Drive} o Disco duro}
 }
+
 @GLOSSDEF{VMM,
 word = {VMM},
 definition = {Virtual Machine Monitor}
 }
+
 @GLOSSDEF{JVM,
 word = {JVM},
 definition = {Java Virtual Machine}
@@ -14,5 +16,10 @@ definition = {Java Virtual Machine}
 @GLOSSDEF{ACM,
 word = {ACM},
 definition = {Association for Computing Machinery}
+}
+
+@GLOSSDEF{ISA,
+word = {ISA},
+definition = {Instruction Set Architecture}
 }
 
