--- a/memoria/partes/a/capitulo1.tex
+++ b/memoria/partes/a/capitulo1.tex
@@ -36,8 +36,8 @@
 \noindent Podemos encontrar dos tipos de éstas dependiendo de cómo se ejecuten en el sistema:
 
 \begin{itemize}
-\item \textbf{Máquinas virtuales de proceso} o máquina virtual de aplicación, se ejecuta como un proceso normal dentro de un sistema operativo y soporta un solo proceso. Su objetivo es el de proporcionar un entorno de ejecución independiente del sistema operativo y del hardware. Una máquina virtual de proceso muy popular es la de Java o \gloss{JVM} (\emph{Java Virtual Machine}).
-\item \textbf{Máquinas virtuales de sistema} o máquinas virtuales de hardware, que permiten a la máquina física multiplicarse entre varias máquinas virtuales, cada una con su propio sistema operativo. A la capa de software que se permite la virtualización se la llama \emph{monitor de máquina virtual} o \emph{Virtual Machine Monitor}(\gloss{VMM}), anteriormente mencionado.
+\item \textbf{Máquinas virtuales de proceso} o máquina virtual de aplicación, se ejecuta como un proceso normal dentro de un sistema operativo y soporta un solo proceso. Su objetivo es el de proporcionar un entorno de ejecución independiente del sistema operativo y del hardware. Una máquina virtual de proceso muy popular es la de Java o \gloss{JVM}.
+\item \textbf{Máquinas virtuales de sistema} o máquinas virtuales de hardware, que permiten a la máquina física multiplicarse entre varias máquinas virtuales, cada una con su propio sistema operativo. A la capa de software que se permite la virtualización se la llama \emph{monitor de máquina virtual} o (\gloss{VMM}, anteriormente mencionado.
 \end{itemize}
 
 \noindent Como es obvio nosotros nos vamos a centrar en el último tipo, puesto que vamos a analizar la virtualización en las computadoras de la universidad, y éstas se ejecutan como un sistema operativo propio y no como una aplicación de éste.
@@ -48,10 +48,10 @@
 \begin{itemize}
 \item \textbf{Equivalencia o fidelidad:} Un programa corriendo bajo el VMM debe exhibir un comportamiento  esencialmente idéntico a aquel demostrado cuando se ejecuta directamente en una máquina equivalente.
 \item \textbf{Control de recursos y seguridad:} El \gloss{VMM} debe estar en completo control de los recursos virtualizados.
-\item \textbf{Eficiencia:} La mayor parte de las instrucciones de máquina debe ser ejecutada sin la intervención del \gloss{VMM} \gloss{vmm}.
+\item \textbf{Eficiencia:} La mayor parte de las instrucciones de máquina debe ser ejecutada sin la intervención del \gloss{VMM}.
 \end{itemize}
 
-\noindent Para llevar a cabo una virtualización del sistema que cumpla estas propiedades, Popek y Goldberg escribieron en un artículo en 1974 en la revista \emph{Communications of the \gloss{ACM}}\cite{reqvir}, qué condiciones se han de dar para una virtualización eficiente, en dicho artículo realizan un análisis del repertorio de instrucciones del computador o ISA (\emph{Instruction Set Architecture}).\\
+\noindent Para llevar a cabo una virtualización del sistema que cumpla estas propiedades, Popek y Goldberg escribieron en un artículo en 1974 en la revista \emph{Communications of the \gloss{ACM}}\cite{reqvir}, qué condiciones se han de dar para una virtualización eficiente, en dicho artículo realizan un análisis del repertorio de instrucciones del computador o \gloss{ISA}.\\
 
 \noindent Dividiendo las instrucciones en:
 \begin{itemize}
