--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -14,6 +14,9 @@
 \usepackage[nottoc]{tocbibind}	%Para mostrar la bibliografia en el índice
 \usepackage{tikz}
 \usepackage[refpages]{gloss} % Para el glosario
+
+\setlength\parindent{0pt} % Quita la indentación
+
 \renewcommand{\glossname}{Glosario} 
 
 \newtheorem{teorema}{Teorema}
@@ -22,7 +25,7 @@
 
 \newcommand*{\autores}{
 \begin{tabular}{r l}
-GII+GIS: &  Jesús Alcalde Alcázar \\
+GII+GIS: & Jesús Alcalde Alcázar \\
 		 & Germán Alonso Azcutia \\
 		 & Adrián Gutiérrez Jiménez \\
 GIS+MAT: & José Ignacio Escribano Pablos \\
