--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -4,7 +4,7 @@
 
 \section{Componentes}
 
-\noindent El esquema básico es el siguiente:
+El esquema básico es el siguiente:
 
 \begin{center}
 \begin{tikzpicture}
