Añadido paquete emptypage
Este paquete elimina todos los encabezados de las páginas en blanco.

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -14,6 +14,7 @@
 \usepackage[nottoc]{tocbibind}	%Para mostrar la bibliografia en el índice
 \usepackage{tikz}
 \usepackage[refpages]{gloss} % Para el glosario
+\usepackage{emptypage} % Para eliminar encabezado de las páginas en blanco
 
 \setlength\parindent{0pt} % Quita la indentación
 
