Corregido algunos términos del Glosario y su aparición.
A partir de ahora se añadirá el termino "short" para los acrónimos.

--- a/memoria/glosario.bib
+++ b/memoria/glosario.bib
@@ -1,25 +1,36 @@
 @GLOSSDEF{HDD,
-word = {HDD},
-definition = {\emph{Hard Disk Drive} o Disco duro}
+word = {Hard Disk Drive},
+definition = {Disco Duro},
+short = {HDD}
 }
 
 @GLOSSDEF{VMM,
-word = {VMM},
-definition = {Virtual Machine Monitor}
+word = {Virtual Machine Monitor},
+definition = {Monitor de la Máquina Virtual},
+short = {VMM},
+}
+
+@GLOSSDEF{MAQVIR,
+word = {Máquina virtual},
+definition = {Software que simula a una computadora y puede ejecutar programas como si fuese una computadora real.},
+short-word = {máquina virtual},
 }
 
 @GLOSSDEF{JVM,
-word = {JVM},
-definition = {Java Virtual Machine}
+word = {Java Virtual Machine},
+definition = {Máquina virtual de la plataforma Java},
+short = {JVM},
 }
 
 @GLOSSDEF{ACM,
-word = {ACM},
-definition = {Association for Computing Machinery}
+word = {Association for Computing Machinery},
+definition = {Primera sociedad científica y educativa acerca de la Computación},
+short = {ACM},
 }
 
 @GLOSSDEF{ISA,
-word = {ISA},
-definition = {Instruction Set Architecture}
+word = {Instruction Set Architecture},
+definition = {Especificación que detalla las instrucciones que una CPU de un ordenador puede entender y ejecutar, su repertorio de instrucciones},
+short = {ISA}
 }
 
