Añadido el libro de Richard Taylor
Añadido a la bibliografía el libro Software Architecture: Foundations,
Theory and Practice

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -30,7 +30,15 @@ author = {Gerald J, Popek and Robert P. Goldberg},
 title = {Formal Requirements for Virtualizable Third Generation Architectures},
 journal = {Communications of the ACM},
 year = {1974},
-pages = {412 to 421},
+pages = {412-421},
 volume = {17},
 number = {7},
 }
+
+@book{architecture,
+ author = {Taylor, R. N. and Medvidovic, N. and Dashofy, E. M.},
+ title = {Software Architecture: Foundations, Theory, and Practice},
+ year = {2009},
+ isbn = {0470167742, 9780470167748},
+ publisher = {Wiley Publishing},
+} 
